# deadgenre

./: .gitignore  AGENTS.md  README.md
client/: project.godot
client/assets/: manifest.json
client/scenes/: HUD.tscn  Main.tscn  Main3D.tscn  World.tscn  main.tscn
client/scenes/entities/: Mob.tscn  NPC.tscn  Player.tscn
client/scenes/entities3d/: Mob3D.tscn  NPC3D.tscn  Player3D.tscn  Prop3D.tscn
client/scenes/world3d/: World3D.tscn
client/scripts/autoload/: EventBus.gd  GameManager.gd  NetworkManager.gd  config.gd  content_db.gd  event_bus.gd  game_manager.gd
client/scripts/entities/: Mob.gd  (+6 more)
content/items/: consumables.json  materials.json  starter_armor.json  starter_weapons.json
content/npcs/: starter_npcs.json
content/quests/: tutorial_quest.json
content/schema/: item.schema.json  npc.schema.json  skill.schema.json  world_chunk.schema.json
content/skills/: core_skills.json
content/world/: starter_area.json
docs/: AI_GUIDE.md  ARCHITECTURE.md  SYSTEMS.md  ai-content-pipeline.md  ai-guide.md  content-authoring.md  game-vision.md  technical-architecture.md
docs/adr/: 001-2.5d-camera-and-wasd-movement.md  002-dreadmyst-2-5d-billboards.md
docs/systems/: combat.md  inventory.md  world.md
server/: Cargo.toml
server/src/: combat.rs  inventory.rs  items.rs  lib.rs  npc.rs  player.rs  skills.rs  world.rs
tools/asset_generator/: README.md  config.py  generate.py  requirements.txt
tools/generators/: content_validator.py  generate_items.py  import_content.py
tools/templates/: item_generation.md  npc_generation.md  world_chunk_generation.md
(+44 files in other folders)
